// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image Default 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../src/__fixtures__/assets/landscape-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "height": NaN,
        "width": NaN,
      },
      undefined,
    ]
  }
/>
`;

exports[`Storyshots Image Max height 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../src/__fixtures__/assets/landscape-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "height": NaN,
        "width": 200,
      },
      undefined,
    ]
  }
/>
`;

exports[`Storyshots Image Width 1`] = `
<Image
  resizeMode="contain"
  source={
    Object {
      "testUri": "../../../src/__fixtures__/assets/landscape-2.jpg",
    }
  }
  style={
    Array [
      Object {
        "height": NaN,
        "width": 200,
      },
      undefined,
    ]
  }
/>
`;
